[package]
name = "InsightFlow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
csv = "1"
pinyin = { version = "0.10.0", features = ["plain"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
once_cell = "1"